--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/sdsd.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>Plantly | Buy Indoor & Outdoor Plants Online</title>
+    <meta
+      name="description"
+      content="Plantly is your one-stop shop for indoor plants, outdoor plants, herbs, and air purifying greenery. Shop fresh plants online with fast delivery."
+    />
+    <meta
+      name="keywords"
+      content="plants, buy plants online, indoor plants, outdoor plants, herbs, plant store"
+    />
   </head>
   <body>
     <div id="root"></div>
