start of categoty page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/sdsd.png" />
+    <link rel="icon" type="image/svg+xml" href="/sdsd.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plantly | Buy Indoor & Outdoor Plants Online</title>
     <meta
